--- a/index.html
+++ b/index.html
@@ -37,26 +37,23 @@
 //                document.getElementById("results").value = object;
 //            }
             //Facebook
-            function loadFB(){
-                window.fbAsyncInit = function() {
-                    FB.init({
-                      appId            : '1141884142615563',
-                      autoLogAppEvents : true,
-                      xfbml            : true,
-                      version          : 'v2.10'
-                    });
-                    FB.AppEvents.logPageView();
-                  };
+          window.fbAsyncInit = function() {
+              FB.init({
+                appId            : '1141884142615563',
+                autoLogAppEvents : true,
+                xfbml            : true,
+                version          : 'v2.10'
+              });
+              FB.AppEvents.logPageView();
+            };
 
-                  (function(d, s, id){
-                     var js, fjs = d.getElementsByTagName(s)[0];
-                     if (d.getElementById(id)) {return;}
-                     js = d.createElement(s); js.id = id;
-                     js.src = "//connect.facebook.net/en_US/sdk.js";
-                     fjs.parentNode.insertBefore(js, fjs);
-                   }(document, 'script', 'facebook-jssdk'));
-
-            }
+            (function(d, s, id){
+               var js, fjs = d.getElementsByTagName(s)[0];
+               if (d.getElementById(id)) {return;}
+               js = d.createElement(s); js.id = id;
+               js.src = "//connect.facebook.net/en_US/sdk.js";
+               fjs.parentNode.insertBefore(js, fjs);
+             }(document, 'script', 'facebook-jssdk'));
             function loginFB(){
                 FB.login(function(){}, {scope: 'publish_actions'});
             }
@@ -65,7 +62,7 @@
         <link rel="stylesheet" type="text/css" href="/css/external.css">
         <link href="https://fonts.googleapis.com/css?family=Nova+Flat" rel="stylesheet">
     </head>
-    <body onload="initAuth(), loadFB()">
+    <body onload="loadFB()">
         <img src="/imgs/nitelyfeScriptLogo.png" id="title">
         <div id="aboutAppWrapper">
             <h2 id="aboutAppHeader">What does it do?</h2>
