--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             //Facebook
           window.fbAsyncInit = function() {
               FB.init({
-                appId            : '1141884142615563',
+                appId            : '307341646416455',
                 autoLogAppEvents : true,
                 xfbml            : true,
                 version          : 'v2.10'
@@ -55,7 +55,16 @@
                fjs.parentNode.insertBefore(js, fjs);
              }(document, 'script', 'facebook-jssdk'));
             function loginFB(){
-                FB.login(function(){}, {scope: 'publish_actions'});
+              FB.login(function(){
+                FB.api(
+                    "/{user-id}/friends",
+                    function (response) {
+                      if (response && !response.error) {
+                        console.print("this worked");
+                      }
+                    }
+                );
+              }, {scope: 'user_friends'});
             }
 
         </script>
