--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           window.fbAsyncInit = function() {
               FB.init({
                 appId            : '307341646416455',
+                appSecret        : 'ec1fdb1b862078ca6595868e194ec100',
                 autoLogAppEvents : true,
                 xfbml            : true,
                 version          : 'v2.10'
@@ -56,11 +57,16 @@
              }(document, 'script', 'facebook-jssdk'));
             function loginFB(){
               FB.login(function(){
+                console.log("1");
                 FB.api(
                     "/{user-id}/friends",
                     function (response) {
+                      console.log("2");
                       if (response && !response.error) {
-                        console.print("this worked");
+                        console.log("this worked");
+                      }
+                      if(response.error){
+                        console.log(response.error);
                       }
                     }
                 );
@@ -71,7 +77,7 @@
         <link rel="stylesheet" type="text/css" href="/css/external.css">
         <link href="https://fonts.googleapis.com/css?family=Nova+Flat" rel="stylesheet">
     </head>
-    <body onload="loadFB()">
+    <body>
         <img src="/imgs/nitelyfeScriptLogo.png" id="title">
         <div id="aboutAppWrapper">
             <h2 id="aboutAppHeader">What does it do?</h2>
